--- a/index.htm
+++ b/index.htm
@@ -25,6 +25,7 @@
 				</div>
 			</section>
 			<div id="map"></div>
+			<div class="levels"><div class="level" style="background-color: #0000CC;">0</div><div class="level" style="background-color: #0133CC;">3</div><div class="level" style="background-color: #0166FF;">5</div><div class="level" style="background-color: #0099FF;">8</div><div class="level" style="background-color: #32CBFE;">10</div><div class="level" style="background-color: #65FE9A;">13</div><div class="level" style="background-color: #99FF66;">15</div><div class="level" style="background-color: #CCFF33;">18</div><div class="level" style="background-color: #FFFF01;">20</div><div class="level" style="background-color: #FF9933;">35</div><div class="level" style="background-color: #FF3301;">50</div><div class="level" style="background-color: #C90000;">65</div><div class="level" style="background-color: #800000;">80</div></div>
 		</div>
 	</div>
 	<script src="https://unpkg.com/jquery"></script>
