--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
 	</div>
 	<script src="https://unpkg.com/jquery"></script>
 	<script src="https://unpkg.com/moment"></script>
-	<script src="js/all.js"></script>
+	<script src="js/all.js?3"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpiRJNSYQ9a-B8o3c-LIH95wnhG7Bw7Cg&callback=initMap"></script>
 </body>
 </html>
